--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,7 @@ dependencies = [
     "pandas>=2.3.1",
     "seaborn>=0.13.2",
     "yfinance>=0.2.65",
+    "arch>=6.0",
+    "statsmodels>=0.14.1",
 ]
 
